[gd_scene load_steps=40 format=2]

[ext_resource path="res://src/Player/PlayerSkin.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Commons/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Player/States/Move.gd" type="Script" id=3]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=4]
[ext_resource path="res://src/Player/States/Move/Run.gd" type="Script" id=5]
[ext_resource path="res://src/Player/States/Move/Hurt.gd" type="Script" id=6]
[ext_resource path="res://src/Player/States/Move/Air.gd" type="Script" id=7]
[ext_resource path="res://src/Player/States/Move/Idle.gd" type="Script" id=8]
[ext_resource path="res://src/Commons/Combat/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Player/States/Die.gd" type="Script" id=10]
[ext_resource path="res://src/Commons/Actor/Stats.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Commons/SFX/SFXPlayer.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/audio/jump/jump_01.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/jump/bounce_01.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/audio/impact/sfx_sounds_impact1.wav" type="AudioStream" id=15]
[ext_resource path="res://src/Player/Momentum.gd" type="Script" id=16]
[ext_resource path="res://assets/audio/jingles/jingles_PIZZI07.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/theme/debug.tres" type="Theme" id=18]
[ext_resource path="res://src/Player/States/Spawn.gd" type="Script" id=19]
[ext_resource path="res://src/Commons/Combat/Muzzle.gd" type="Script" id=20]
[ext_resource path="res://src/Resources/Projectiles/Resources/beam.tres" type="Resource" id=21]
[ext_resource path="res://src/Player/States/Climbing.gd" type="Script" id=22]
[ext_resource path="res://src/Player/DebugPlayerInfo.gd" type="Script" id=23]
[ext_resource path="res://src/Player/Detectors/LadderOneWayPlatformDetector.gd" type="Script" id=25]
[ext_resource path="res://src/Player/Detectors/MovingPlatformDetector.gd" type="Script" id=26]
[ext_resource path="res://src/Resources/Projectiles/Resources/hyperbeam.tres" type="Resource" id=28]
[ext_resource path="res://src/Player/States/Move/FiringIdle.gd" type="Script" id=32]
[ext_resource path="res://src/Resources/Projectiles/Resources/curvedbeam.tres" type="Resource" id=35]
[ext_resource path="res://src/Player/BeamStates/Firing.gd" type="Script" id=39]
[ext_resource path="res://src/Player/BeamStates/Charged.gd" type="Script" id=40]
[ext_resource path="res://src/Player/BeamStates/Charging.gd" type="Script" id=41]
[ext_resource path="res://src/Player/States/Move/FiringRun.gd" type="Script" id=42]
[ext_resource path="res://src/Player/BeamFireMode.gd" type="Script" id=43]
[ext_resource path="res://assets/theme/joystix_10.tres" type="DynamicFont" id=44]
[ext_resource path="res://src/Player/PlayerIndicator.gd" type="Script" id=45]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 7, 14.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 8, 15 )

[sub_resource type="RayShape2D" id=15]
length = 1.0

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 6, 1.5 )

[node name="BasePlayer" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 2
script = ExtResource( 4 )
beam_resource = ExtResource( 21 )
hyper_beam_resource = ExtResource( 28 )
curved_beam_resource = ExtResource( 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14.5 )
shape = SubResource( 14 )

[node name="Skin" parent="." instance=ExtResource( 1 )]

[node name="Muzzle" type="Position2D" parent="Skin"]
position = Vector2( 19, -17 )
script = ExtResource( 20 )

[node name="Stats" parent="." instance=ExtResource( 11 )]
max_health = 99.0

[node name="Momentum" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="Hitbox" parent="." instance=ExtResource( 9 )]
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -15 )
shape = SubResource( 18 )

[node name="MovingPlatformDetector" type="Area2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatformDetector"]
shape = SubResource( 15 )

[node name="LadderOneWayPlatformDetector" type="Area2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 0
collision_mask = 32
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderOneWayPlatformDetector"]
position = Vector2( 0, 1.5 )
shape = SubResource( 17 )

[node name="WorldDetector" type="Area2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldDetector"]
shape = SubResource( 15 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false
update_scale = false

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="BeamFireMode" type="Node2D" parent="."]
script = ExtResource( 43 )

[node name="BeamStateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Firing")

[node name="Firing" type="Node2D" parent="BeamStateMachine"]
script = ExtResource( 39 )

[node name="Timer" type="Timer" parent="BeamStateMachine/Firing"]
wait_time = 0.25
one_shot = true

[node name="Charging" type="Node2D" parent="BeamStateMachine"]
script = ExtResource( 41 )

[node name="Timer" type="Timer" parent="BeamStateMachine/Charging"]
wait_time = 0.5
one_shot = true

[node name="Charged" type="Node2D" parent="BeamStateMachine"]
script = ExtResource( 40 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Idle" type="Node2D" parent="StateMachine/Move"]
script = ExtResource( 8 )

[node name="JumpInputBuffering" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.15
one_shot = true

[node name="FiringIdle" type="Node2D" parent="StateMachine/Move"]
script = ExtResource( 32 )

[node name="Run" type="Node2D" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="FiringRun" type="Node2D" parent="StateMachine/Move"]
script = ExtResource( 42 )

[node name="TransitionInterval" type="Timer" parent="StateMachine/Move/FiringRun"]
wait_time = 0.75

[node name="Air" type="Node2D" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="CoyoteTime" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.15
one_shot = true

[node name="Impulse" parent="StateMachine/Move/Air" instance=ExtResource( 12 )]
stream = ExtResource( 13 )

[node name="Bounce" parent="StateMachine/Move/Air" instance=ExtResource( 12 )]
stream = ExtResource( 14 )

[node name="Hurt" type="Node2D" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="StateMachine/Move/Hurt"]

[node name="Impact" parent="StateMachine/Move/Hurt" instance=ExtResource( 12 )]
stream = ExtResource( 15 )
max_pitch_scale = 1.1

[node name="Die" type="Node2D" parent="StateMachine/Move"]
script = ExtResource( 10 )

[node name="Sfx" parent="StateMachine/Move/Die" instance=ExtResource( 12 )]
stream = ExtResource( 17 )

[node name="Climbing" type="Node2D" parent="StateMachine"]
script = ExtResource( 22 )

[node name="Spawn" type="Node2D" parent="StateMachine"]
script = ExtResource( 19 )

[node name="DebugCanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="DebugPlayerInfo" type="Control" parent="DebugCanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 18 )
script = ExtResource( 23 )

[node name="VBoxContainer" type="VBoxContainer" parent="DebugCanvasLayer/DebugPlayerInfo"]
margin_left = 5.0
margin_top = 4.0
margin_right = 152.0
margin_bottom = 90.0

[node name="State" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_right = 147.0
margin_bottom = 11.0
text = "State: Idle"

[node name="Beam" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 15.0
margin_right = 147.0
margin_bottom = 26.0
text = "State: Idle"

[node name="FlagLadder" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 30.0
margin_right = 147.0
margin_bottom = 41.0
text = "Moving Platform: False"

[node name="LadderOneWayPlatform" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 45.0
margin_right = 147.0
margin_bottom = 56.0
text = "Ladder OneWayPlatform: False"

[node name="LadderPosition" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 60.0
margin_right = 147.0
margin_bottom = 71.0
text = "Ladder Position: False"

[node name="MovingPlatform" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 75.0
margin_right = 147.0
margin_bottom = 86.0
text = "Ladder: False"

[node name="VerticalMove" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 90.0
margin_right = 147.0
margin_bottom = 101.0
text = "Vertical"

[node name="HorizontalMove" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 105.0
margin_right = 147.0
margin_bottom = 116.0
text = "Horizontal"

[node name="IsOnFloor" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 120.0
margin_right = 147.0
margin_bottom = 131.0
text = "is on floor"

[node name="LookDirection" type="Label" parent="DebugCanvasLayer/DebugPlayerInfo/VBoxContainer"]
margin_top = 135.0
margin_right = 147.0
margin_bottom = 146.0
text = "lookdirection"

[node name="PlayerIndicator" type="Label" parent="."]
margin_left = -10.0
margin_top = -45.0
margin_right = 13.0
margin_bottom = -31.0
custom_fonts/font = ExtResource( 44 )
text = "P1"
align = 1
script = ExtResource( 45 )
